# myriad

./: .gitignore  Compartment.c  Compartment.cpp  Compartment.cu  Compartment.cuh  Compartment.h  Compartment.hpp  Compartment_meta.h  DCCurrentMech.c  DCCurrentMech.cu  DCCurrentMech.cuh  DCCurrentMech.h  DCCurrentMech_meta.h  Doxyfile.conf  HHGABAAMechanism.c  HHGABAAMechanism.cu  HHGABAAMechanism.cuh  HHGABAAMechanism.h  HHGradedGABAAMechanism.c  HHGradedGABAAMechanism.cu  HHGradedGABAAMechanism.cuh  HHGradedGABAAMechanism.h  HHGradedGABAAMechanism_meta.h  HHKCurrMechanism.c  HHKCurrMechanism.cpp  HHKCurrMechanism.cu  HHKCurrMechanism.cuh  HHKCurrMechanism.h  HHKCurrMechanism.hpp  HHKCurrMechanism_meta.h  HHLeakMechanism.c  HHLeakMechanism.cpp  HHLeakMechanism.cu  HHLeakMechanism.cuh  HHLeakMechanism.h  HHLeakMechanism.hpp  HHLeakMechanism_meta.h  HHNACURRMECHANISM_meta.h  HHNaCurrMechanism.c  HHNaCurrMechanism.cpp  (+76 more)
docs/: Makefile  conf.py  index.rst  modules.rst  myriad.ast_function_assembler.rst  myriad.ast_parse.rst  myriad.ast_prettyprint.rst  myriad.myriad_compartment.rst  myriad.myriad_ctypes.rst  myriad.myriad_mako_wrapper.rst  myriad.myriad_mechanism.rst  myriad.myriad_metaclass.rst  myriad.myriad_object.rst  myriad.myriad_simul.rst  myriad.myriad_types.rst  myriad.myriad_utils.rst  myriad.rst  myriad_compartment.rst  myriad_mechanism.rst  myriad_object.rst  myriad_testing.rst  myriad_types.rst  termcolor.rst  test_ast_function_assembler.rst  test_classparse.rst  test_myriad_object.rst  test_myriad_simul.rst  test_myriad_types.rst
myriad/: __init__.py  (+12 more)
(+191 files in other folders)
